--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <img class="logo" src="./assets/img/logo_cine.png">
         <ul class="menu-desktop">
-            <li><p>Películas</p></li>
+            <li><p><a href="#peliculas">Películas</a></p></li>
             <li><p>Cines</p></li>
             <li><p>Promociones</p></li>
             <li><p>Socios</p></li>
@@ -39,7 +39,7 @@
         </select>
     </header>
     <main>
-        <section class="cards">
+        <section id="peliculas" class="cards">
             <article>
                 <img class="peli" src="./assets/img/guason 2.jpeg" alt="guason 2">
                 <p>Guasón 2: Folie a deux</p>
